--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<groupId>org.livingtech</groupId>
-	<artifactId>dm3d</artifactId>
+	<artifactId>dm3d-sjj3d</artifactId>
 	<version>1.2.0-SNAPSHOT</version>
 
 	<name>Deforming Mesh</name>
