--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
 			<artifactId>nashorn-core</artifactId>
 			<version>15.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.janelia.saalfeldlab</groupId>
+			<artifactId>n5-ij</artifactId>
+			<version>4.2.1</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
